@@ -44,13 +44,12 @@
 #  error C++0x header cannot be included from TR1 header
 #endif
 
-#include <cmath>
-#include <string>
 #include <utility>
 #include <algorithm> // lower_bound
+#include <type_traits>
 #include <bits/allocator.h>
 #include <bits/stl_function.h> // equal_to, _Identity, _Select1st
-#include <type_traits>
+#include <bits/stringfwd.h>
 #include <bits/functional_hash.h>
 #include <bits/hashtable.h>
 
