@@ -1,5 +1,15 @@
 2007-12-24  Paolo Carlini  <pcarlini@suse.de>
 
+	* include/tr1_impl/hashtable_policy.h (_Prime_rehash_policy::
+	_M_next_bkt, _M_bkt_for_elements, _M_need_rehash): Use __builtin_ceil.
+	* include/std/unordered_map: Do not include <cmath>; prefer
+	<bits/stringfwd.h> to <string>.
+	* include/std/unordered_set: Likewise.
+	* include/tr1/unordered_map: Likewise.
+	* include/tr1/unordered_set: Likewise.
+
+2007-12-24  Paolo Carlini  <pcarlini@suse.de>
+
 	* include/std/complex (complex<float>::complex(float, float)):
 	Uglify parameters.
 
